[package]
name = "tree-sitter-ysh"
description = "Tree-sitter parser for YSH shell script language"
version = "0.0.1"
authors = ["Danilo Spinella <oss@danyspin97.org>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ysh"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/danyspin97/tree-sitter-ysh"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
